🐛 fix theme color on small screens

--- a/assets/style.less
+++ b/assets/style.less
@@ -108,17 +108,7 @@ nav {
         }
       }
     }
-    #home-svg {
-      -webkit-filter: invert(100%);
-      filter: invert(100%);
-      height: 2.5rem;
-      display: none;
-      margin: 0 auto;
-      @media @mid {
-        display: block;
-        margin: 0.5rem 0;
-      }
-    }
+    
   }
 }
 
@@ -127,7 +117,7 @@ nav {
   padding: 0 4rem 0 3rem;
   @media @phone {
     margin-left: 0;
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     z-index: 0;
     margin-top: 3rem;
   }
